<resources>
    <string name="app_name">StarvinArtist</string>
    <string name="art">Art</string>
    <string name="submit">Submit</string>
    <string name="search">Search...</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="signup_instructions">Don\'t have an account? Sign up here</string>
    <string name="signup">Sign up</string>
    <string name="name">Name...</string>
    <string name="buy">Buy</string>
    <string name="photo_name">Name</string>
    <string name="price">Price: </string>
    <string name="contact">Contact: </string>
    <string name="upload_instructions">Have art you want to upload?</string>
    <string name="upload">upload</string>
    <string name="price_hint">Price...</string>
    <string name="contact_hint">Contact Info...</string>
    <string name="tag_hint">Tags separate with \",\" i.e. tag1,tag2,tag3</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>