<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/app_name" />


    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:backgroundTint="#002AFF"
        android:textColor="@color/white"
        android:padding="15dp"
        android:layout_margin="30dp"/>

    <TextView
        android:id="@+id/login_name_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text=""
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/signup_instructions"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/signup_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="15sp"
        android:backgroundTint="#002AFF"
        android:textColor="@color/white"
        android:padding="15dp"
        android:layout_margin="15dp" />


</LinearLayout>