<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/buy_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:text="@string/photo_name"/>

    <TextView
        android:id="@+id/buy_price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:text="@string/price"/>

    <TextView
        android:id="@+id/buy_contact_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:text="@string/contact" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:cardCornerRadius="30dp"
        android:padding="5dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/buy_art_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/flower"
            android:contentDescription="@string/art" />

    </androidx.cardview.widget.CardView>

</LinearLayout>