<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:hint="@string/search"
            android:inputType="text"
            android:layout_gravity="center"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/search_icon"
            android:scaleType="fitCenter"
            android:tint="@color/white"
            android:padding="15dp"
            android:backgroundTint="#002AFF"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:cardCornerRadius="30dp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/art_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/flower"
            android:contentDescription="@string/art" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_arrow_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/arrow_left"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:tint="@color/white"
            android:padding="15dp"
            android:backgroundTint="#002AFF"
            />
            <Button
                android:id="@+id/buy_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/buy"
                android:padding="15dp"
                android:backgroundTint="#002AFF"/>

            <ImageButton
                android:id="@+id/right_arrow_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/arrow_right"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:tint="@color/white"
                android:padding="15dp"
                android:backgroundTint="#002AFF"
                />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="@string/upload_instructions"/>

        <Button
            android:id="@+id/upload_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="#002AFF"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:text="@string/upload"/>

    </LinearLayout>

</LinearLayout>